# drf_multy_serializers

./: README.md  pyproject.toml  setup.py
drf_multy_serializers/constants/: http.py
drf_multy_serializers/mapping_serializers/: __init__.py  action_mapper.py  multy_mapper.py
drf_multy_serializers/type_stubs/: http.py  request.py
drf_multy_serializers/views/: generics.py
